--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,9 +8,13 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2024.04.01"
+messagebarcompose = "1.0.1"
 navigationCompose = "2.7.7"
 materialIconsExtended = "1.6.6"
 libraryBase = "1.16.0"
+onetapcompose = "1.0.0"
+realmGradlePlugin = "10.18.0"
+librarySync = "1.16.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
@@ -30,6 +34,10 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3",
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version = "1.6.7" }
 library-base = { group = "io.realm.kotlin", name = "library-base", version.ref = "libraryBase" }
+messagebarcompose = { module = "com.github.stevdza-san:MessageBarCompose", version.ref = "messagebarcompose" }
+onetapcompose = { module = "com.github.stevdza-san:OneTapCompose", version.ref = "onetapcompose" }
+realm-gradle-plugin = { group = "io.realm", name = "realm-gradle-plugin", version.ref = "realmGradlePlugin" }
+library-sync = { group = "io.realm.kotlin", name = "library-sync", version.ref = "librarySync" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
