Update Hotel UI
1234

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ realmGradlePlugin = "10.18.0"
 librarySync = "1.16.0"
 benchmarkMacro = "1.2.4"
 datetime = "0.2.9"
+accompanistDaterangepicker = "0.16.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version = "1.13.1" }
@@ -40,6 +41,7 @@ realm-gradle-plugin = { group = "io.realm", name = "realm-gradle-plugin", versio
 library-sync = { group = "io.realm.kotlin", name = "library-sync", version.ref = "librarySync" }
 androidx-benchmark-macro = { group = "androidx.benchmark", name = "benchmark-macro", version.ref = "benchmarkMacro" }
 datetime = { group = "com.vanpra.compose-material-dialogs", name = "datetime", version.ref = "datetime" }
+accompanist-daterangepicker = { group = "com.google.accompanist", name = "accompanist-daterangepicker", version.ref = "accompanistDaterangepicker" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
